--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-26 02:44 -->
+<!-- 2022-11-26 09:37 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf71943f">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#orgd6ad1a1">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org5011224">1.1. window config &amp; register</a></li>
-<li><a href="#orgfb0e7a7">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#org2ab0e98">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#orgacd2fc9">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#orgd53992f">1.1. window config &amp; register</a></li>
+<li><a href="#org71d4bba">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#orga5dfcf8">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#orgb707a6b">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgf71943f" class="outline-2">
-<h2 id="orgf71943f"><span class="section-number-2">1.</span> <a href="#orgf71943f">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-orgd6ad1a1" class="outline-2">
+<h2 id="orgd6ad1a1"><span class="section-number-2">1.</span> <a href="#orgd6ad1a1">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org5011224" class="outline-3">
-<h3 id="org5011224"><span class="section-number-3">1.1.</span> <a href="#org5011224">window config &amp; register</a></h3>
+<div id="outline-container-orgd53992f" class="outline-3">
+<h3 id="orgd53992f"><span class="section-number-3">1.1.</span> <a href="#orgd53992f">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-orgfb0e7a7" class="outline-3">
-<h3 id="orgfb0e7a7"><span class="section-number-3">1.2.</span> <a href="#orgfb0e7a7"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-org71d4bba" class="outline-3">
+<h3 id="org71d4bba"><span class="section-number-3">1.2.</span> <a href="#org71d4bba"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org2ab0e98" class="outline-3">
-<h3 id="org2ab0e98"><span class="section-number-3">1.3.</span> <a href="#org2ab0e98"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-orga5dfcf8" class="outline-3">
+<h3 id="orga5dfcf8"><span class="section-number-3">1.3.</span> <a href="#orga5dfcf8"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgacd2fc9" class="outline-3">
-<h3 id="orgacd2fc9"><span class="section-number-3">1.4.</span> <a href="#orgacd2fc9"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-orgb707a6b" class="outline-3">
+<h3 id="orgb707a6b"><span class="section-number-3">1.4.</span> <a href="#orgb707a6b"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-26 02:44</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-26 09:37</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
